# pacifica-operator

./: .gitignore  CLAUDE.md  LICENSE  QUICK_REFERENCE.txt  README.md  docker-compose.yml  env.example  pyproject.toml
docker/: Dockerfile.api  Dockerfile.db-writer  Dockerfile.market-data  Dockerfile.trading-engine
docs/: 2025-12-06_live-trading-configuration.md  2025-12-06_pacifica-wallet-setup.md  AGENT_WALLET_SETUP.md  AUDIT_2025_12_07.md  CHANGELOG.md  CHANGELOG_TRADING_ENGINE_FIXES.md  DATABASE_INIT_2025-11-14.md  DATABASE_RECOVERY.md  DATABASE_RESTORATION_SUCCESS.md  DATABASE_RESTORE_2025-11-15.md  DATA_PIPELINE_AND_CANDLE_WARNINGS.md  DATA_STORAGE_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DOCKER_NETWORK_FIX.md  FIX_KBONK_KPEPE_MARKET_DATA.md  FIX_TP_SL_ORDER_CREATION.md  GEMINI.md  HIGH_MOMENTUM_STRATEGY.md  IMPROVEMENTS_2025-11-15.md  INVESTIGATION_TP_SL_ISSUE.md  ITERATION_2_STATUS.md  LOT_SIZE_FIX_2025-11-10.md  MIGRATION_APPLIED.md  NEXBOT_OPERATOR_INTEGRATION.md  ORDER_PLACEMENT_FIX.md  ORDER_PLACEMENT_READINESS.md  ORDER_PLACEMENT_STATUS.md  PACIFICA_SETUP.md  PAIRS_IMPLEMENTATION.md  POSITION_SYNC_FIX_2025-11-10.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_SSL.md  RISK_MANAGEMENT_DEPLOYMENT_2025-11-16.md  SCALPING_STRATEGY.md  SECURITY.md  SECURITY_FIX_2025-11-15.md  SESSION_SUMMARY.md  (+24 more)
migrations/: 002_continuous_aggregates.sql  002_continuous_aggregates_fixed.sql  003_compression_policies.sql  004_add_pairs_table.sql  005_add_trailing_stop_price.sql  006_add_performance_metrics.sql  init.sql
scripts/: main.py  (+39 more)
(+46 files in other folders)
