[project]
name = "nexwave"
version = "0.1.0"
description = "Autonomous trading agent and data platform for Pacifica perpetual DEX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    "kafka-python>=2.0.2",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "loguru>=0.7.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "prometheus-client>=0.19.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "python-telegram-bot>=20.6",
    "solana>=0.30.0",
    "solders>=0.18.0",
    "base58>=2.1.1",
    "cryptography>=41.0.0",
    "PyNaCl>=1.5.0",  # For converting 32-byte seeds to keypairs
    "x402-solana>=2.0.0",  # x402 payment protocol for Solana
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "ipython>=8.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
